@startuml "Generalization"
skinparam class {
    BackgroundColor #ECECFF
    ArrowColor #9C9C9C
    BorderColor #AC93E5
}
skinparam stereotypeCBackgroundColor DeepSkyBlue
skinparam classAttributeIconSize 0

class Animal {
    - _name: str
    + eat()
}

class Dog {
    + bark()
}

class Cat {
    + meow()
}

Animal <|-- Dog
Animal <|-- Cat

@enduml
